--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:fontFamily="@font/BLOODY"
+        android:fontFamily="@font/bloody"
         android:shadowColor="@color/redFifty"
         android:text="@string/title"
         android:textColor="@color/redTen"
@@ -28,7 +28,7 @@
         android:backgroundTint="@color/redTwenty"
         android:padding="10dp"
         android:text="@string/about_text"
-        android:fontFamily="@font/BLOODY"
+        android:fontFamily="@font/bloody"
         android:textSize="40sp"/>
 
     <Button
@@ -38,7 +38,7 @@
         android:layout_gravity="center"
         android:layout_margin="5dp"
         android:backgroundTint="@color/redThirty"
-        android:fontFamily="@font/BLOODY"
+        android:fontFamily="@font/bloody"
         android:padding="15dp"
         android:text="@string/Single_Player"
         android:textSize="40sp" />
@@ -51,7 +51,7 @@
         android:layout_gravity="center"
         android:layout_margin="5dp"
         android:backgroundTint="@color/redForty"
-        android:fontFamily="@font/BLOODY"
+        android:fontFamily="@font/bloody"
         android:padding="15dp"
         android:text="@string/Multi_player"
         android:textSize="40sp" />
