--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/screen"
-            />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/flashlight"
+    <fragment
+        android:name="edu.stlawu.ghostbusters.MainFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/flashlight" />
+        android:id="@+id/fragment_main"
+        android:layout_gravity="center"
+        tools:layout="@layout/fragment_main"
+        />
 
 </FrameLayout>
