--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/ghosts"
+    android:background="@drawable/ghost"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".MainFragment">
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="top"
+        android:fadingEdge="none|vertical"
         android:fontFamily="@font/bloody"
-        android:shadowColor="@color/redFifty"
+        android:foregroundGravity="top"
+        android:gravity="top"
+        android:shadowColor="@color/colorPrimaryDark"
+        android:shadowDy="10"
+        android:shadowRadius="20"
         android:text="@string/title"
+        android:textAlignment="center"
         android:textColor="@color/redTen"
-        android:textSize="55sp" />
+        android:textSize="55sp"
+         />
 
     <Button
         android:id="@+id/about_button"
@@ -24,11 +32,15 @@
         android:layout_height="78dp"
         android:layout_gravity="center"
         android:layout_margin="4dp"
-        android:backgroundTint="@color/redTwenty"
+        android:backgroundTint="@color/redTen"
         android:padding="10dp"
         android:text="@string/about_text"
         android:fontFamily="@font/bloody"
-        android:textSize="40sp"/>
+        android:textSize="40sp"
+        android:shadowColor="@color/colorPrimaryDark"
+        android:shadowDy="10"
+        android:shadowRadius="20"
+        android:textColor="@color/SolidBlack"/>
 
     <Button
         android:id="@+id/single_button"
@@ -40,7 +52,11 @@
         android:fontFamily="@font/bloody"
         android:padding="15dp"
         android:text="@string/single_Player"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:shadowColor="@color/colorPrimaryDark"
+        android:shadowDy="10"
+        android:shadowRadius="20"
+        android:textColor="@color/SolidBlack"/>
 
 
     <Button
@@ -53,6 +69,10 @@
         android:fontFamily="@font/bloody"
         android:padding="15dp"
         android:text="@string/multi_player"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:shadowColor="@color/colorPrimaryDark"
+        android:shadowDy="5"
+        android:shadowRadius="10"
+        android:textColor="@color/SolidBlack"/>
 
 </LinearLayout>
