buttons ans such

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#d1000000</color>
     <color name="SolidBlack">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff0000</color>
     <color name="redTen">#700404</color>
     <color name="redTwenty">#A30505</color>
     <color name="redThirty">#BA1C1C</color>
