--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -25,10 +25,14 @@
 
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/flashlight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/flashlight" />
+        android:layout_width="83dp"
+        android:layout_height="45dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/torch"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"/>
 
 </FrameLayout>
