--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -33,6 +33,7 @@
         android:layout_alignParentTop="true"
         android:src="@drawable/torch"
         android:adjustViewBounds="true"
-        android:scaleType="centerInside"/>
+        android:scaleType="centerInside"
+        android:contentDescription="TODO" />
 
 </FrameLayout>
