Goal Number of Ghosts

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -28,7 +28,7 @@
         android:id="@+id/ghost_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/_0"
+        android:text="@string/ghostgoal"
         android:textSize="45sp"
         android:textColor="@color/redTwenty"
         android:shadowColor="@color/colorPrimaryDark"
