--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="200dp"
         android:layout_marginTop="20dp"
-        android:text="Ghost Count:"
+        android:text="Timer:"
         android:fontFamily="@font/bloody"
         android:textSize="25sp"
         android:textColor="@color/redTwenty"
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="355dp"
+        android:layout_marginLeft="280dp"
         android:text="@string/timer"
         android:textSize="25sp"
         android:textColor="@color/redFifty"
