--- a/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/app/src/main/res/layout/fragment_scoreboard.xml
@@ -36,6 +36,7 @@
                 android:textColor="@color/colorPrimary"/>
 
             <TextView
+                android:id="@+id/highscore_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/highscore_1"
@@ -59,6 +60,7 @@
                 android:textColor="@color/colorPrimary"/>
 
             <TextView
+                android:id="@+id/highscore_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/highscore_2"
@@ -82,6 +84,7 @@
                 android:textColor="@color/colorPrimary"/>
 
             <TextView
+                android:id="@+id/highscore_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/highscore_3"
