--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -27,7 +27,8 @@
             android:id="@+id/screenGhost"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ghost"/>
+            android:src="@drawable/ghost"
+            />
 
         <View
             android:id="@+id/screen"
