--- a/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/app/src/main/res/layout/fragment_scoreboard.xml
@@ -41,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/highscore_1"
+                android:id="@+id/highscore_1"
                 android:textColor="@color/colorPrimary"
                 android:textSize="30dp" />
 
@@ -64,6 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/highscore_2"
+                android:id="@+id/highscore_2"
                 android:textColor="@color/colorPrimary"
                 android:textSize="30dp" />
 
@@ -87,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/highscore_3"
+                android:id="@+id/highscore_3"
                 android:textColor="@color/colorPrimary"
                 android:textSize="30dp" />
 
