--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -30,10 +30,11 @@
             android:src="@drawable/ghost"
             />
 
-        <View
+        <ImageView
             android:id="@+id/screen"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:src="@drawable/flash"/>
 
     </LinearLayout>
 
